# themis-search

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: app.json  shared_schema.json
data/fixtures/: documents.json  external_forensics_manifest.json  external_ir_manifest.json  forensics_audio.json  forensics_image_fake.json  forensics_image_real.json  forensics_video.json  queries.json
paper/: themis_paper.tex
results/computation/: complexity_results.json  dfa_results.csv  epsilon_closure.csv  nfa_subset_construction.csv  summary.json  turing_results.csv
results/forensics/: causal_forensics_chain.json  external_dataset_summary.json  image_detection_results.csv
results/ir/: external_collection_summary.json  ranking_comparison.csv  retrieval_benchmarks.csv
results/neural_search/: dense_vs_sparse.csv  latency_benchmark.csv
results/themis_oracle/: causal_vs_standard.csv  explanations_sample.json
src/haskell/: themis-query.cabal
src/haskell/app/: Main.hs
src/haskell/src/Themis/: Query.hs
src/haskell/test/: QueryRootSpec.hs  Spec.hs
src/python/themis/: __init__.py  api.py  benchmarks.py  causal.py  cli.py  dataset.py  forensics.py  haskell_bridge.py  ir.py  metrics.py  neural.py  oracle.py  query_language.py  schemas.py
src/python/themis/computation/: __init__.py  automata.py  complexity.py  runner.py  turing.py
src/scala/: build.sbt
src/scala/src/main/scala/themis/: InvertedIndex.scala  QueryExpr.scala  SparkIndexer.scala
src/scala/src/test/scala/themis/: InvertedIndexSpec.scala
tests/: test_query_spec.hs  test_themis.py
