cabal-version:       2.4
name:                themis-query
version:             0.1.0
build-type:          Simple

executable themis-query
  main-is:           Main.hs
  hs-source-dirs:    app, src
  build-depends:     base >=4.14 && <5,
                     aeson,
                     bytestring,
                     containers,
                     megaparsec,
                     text
  default-language:  Haskell2010

library
  hs-source-dirs:    src
  exposed-modules:   Themis.Query
  build-depends:     base >=4.14 && <5,
                     aeson,
                     bytestring,
                     containers,
                     megaparsec,
                     text
  default-language:  Haskell2010

test-suite themis-query-test
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test, src
  main-is:           Spec.hs
  other-modules:     Themis.Query
  build-depends:     base >=4.14 && <5,
                     aeson,
                     containers,
                     megaparsec,
                     text,
                     themis-query
  default-language:  Haskell2010

test-suite themis-query-root-spec
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test, src
  main-is:           QueryRootSpec.hs
  other-modules:     Themis.Query
  build-depends:     base >=4.14 && <5,
                     aeson,
                     containers,
                     megaparsec,
                     text,
                     themis-query
  default-language:  Haskell2010
